# agentic-sdlc-eval

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
.claude/: settings.json
docs/: IMPLEMENTATION-PLAN.md
docs/adr/: 0001-one-substrate-two-modes.md  0002-layered-capture-auto-plus-explicit.md  0003-jsonl-duckdb-spine-langfuse-mirror.md  0004-objective-scorecard-no-composite.md
src/sdlc_eval/: __init__.py  cli.py  context_resolver.py  envelope.py  eventlog.py  paths.py  reader.py
src/sdlc_eval/github/: __init__.py  collector.py  gh.py  store.py
src/sdlc_eval/hooks/: __init__.py  session_start.py
tests/: conftest.py  test_cli.py  test_cli_collect.py  test_cli_hook.py  test_context_resolver.py  test_eventlog.py  test_eventlog_concurrency.py  test_gh.py  test_github_collector.py  test_hooks_session_start.py  test_paths.py  test_reader.py  test_snapshot_store.py
tests/fixtures/github/: incremental_ci_runs.json  incremental_issues.json  incremental_pulls.json  incremental_reviews_pr7.json  initial_ci_runs.json  initial_issues.json  initial_pulls.json  review_comments_pr7.json  reviews_pr3.json  reviews_pr7.json
