[project]
name = "agentic-sdlc-eval"
version = "0.1.0"
description = "Measure the cost, quality, and reliability of AI-coded work from issue to merge. One substrate, two modes: production telemetry + benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
sdlc-eval = "sdlc_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc_eval"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
strict = true
